bk_ida/gccida/g0/get_attr_imm_disp
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/insn-attrtab.c:12900:1: error: must use 'enum' tag to refer to type 'attr_imm_disp'
attr_imm_disp  get_attr_imm_disp( rtx insn) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/insn-attrtab.c:12903:1: error: must use 'enum' tag to refer to type 'attr_imm_disp'
attr_imm_disp result; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/insn-attrtab.c:12913:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 13072, "get_attr_imm_disp"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/insn-attrtab.c:12913:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 13072, "get_attr_imm_disp"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/insn-attrtab.c:12960:39: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = memory_displacement_operand( recog_data_0.operand[0], VOIDmode) 
                                      ^~~~~~~~~~~~
                                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/insn-attrtab.c:12961:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& immediate_operand( recog_data_0.operand[1], VOIDmode); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/insn-attrtab.c:13081:59: error: use of undeclared identifier 'recog_data_0'
&& ( !flag_pic || !symbolic_operand( ( unsigned __int16 *)recog_data_0.operand[1])) 
                                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/insn-attrtab.c:13082:33: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& memory_displacement_operand( recog_data_0.operand[0], VOIDmode) 
                                ^~~~~~~~~~~~
                                recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/insn-attrtab.c:13083:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& immediate_operand( recog_data_0.operand[1], VOIDmode); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/insn-attrtab.c:13091:33: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& memory_displacement_operand( recog_data_0.operand[0], VOIDmode) 
                                ^~~~~~~~~~~~
                                recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/insn-attrtab.c:13092:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& immediate_operand( recog_data_0.operand[1], VOIDmode); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/insn-attrtab.c:13103:33: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& memory_displacement_operand( recog_data_0.operand[0], VOIDmode) 
                                ^~~~~~~~~~~~
                                recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/insn-attrtab.c:13104:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& immediate_operand( recog_data_0.operand[1], VOIDmode); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/insn-attrtab.c:13108:36: error: use of undeclared identifier 'recog_data_0'
result = q_regs_operand( ( __int64)recog_data_0.operand[0], 2) 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/insn-attrtab.c:13110:33: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& memory_displacement_operand( recog_data_0.operand[0], VOIDmode) 
                                ^~~~~~~~~~~~
                                recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/insn-attrtab.c:13111:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& immediate_operand( recog_data_0.operand[1], VOIDmode); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/insn-attrtab.c:13152:59: error: use of undeclared identifier 'recog_data_0'
&& ( !flag_pic || !symbolic_operand( ( unsigned __int16 *)recog_data_0.operand[1])) 
                                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/insn-attrtab.c:13153:33: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& memory_displacement_operand( recog_data_0.operand[0], VOIDmode) 
                                ^~~~~~~~~~~~
                                recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/insn-attrtab.c:13154:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& immediate_operand( recog_data_0.operand[1], VOIDmode); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_imm_disp/src/obj/insn-attrtab.o] Error 1
